train10K_ent_manyKiter1.log
/usr/local/lib/python2.7/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.
  from ._conv import register_converters as _register_converters
/usr/local/lib/python2.7/dist-packages/requests/__init__.py:80: RequestsDependencyWarning: urllib3 (1.16) or chardet (3.0.4) doesn't match a supported version!
  RequestsDependencyWarning)
Couldn't import dot_parser, loading of dot files will not be possible.
Traceback (most recent call last):
  File "train_cifar100.py", line 21, in <module>
    from model import Model
  File "/specific/a/home/cc/students/cs/idobronstein/checkouts/tmp/model.py", line 267
    self.training_log.record(step_control['step'], {**results, **step_control})
                                                     ^
SyntaxError: invalid syntax
